# dao-ai-parse

./: README.md  pyproject.toml
config/: example.yaml
dao-ai-parse/: main.py  pyproject.toml
notebooks/: 01_parse_documents.py
